--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,25 +6,41 @@
 		<meta http-equiv="expires" content="0" />
 		<meta charset="utf-8" />
 
+		<link rel="manifest" href="manifest.json">
+
 		<title>UI5 Application: br.com.switch.farmtenz</title>
 
 		<script
 			id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
 				"br.com.switch.farmtenz": "./"
 			}'
-			data-sap-ui-theme="sap_horizon"
+			data-sap-ui-theme="sap_horizon, sap_horizon_dark"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
+			data-sap-ui-libs="sap.m"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-xx-waitForTheme="true"
-			data-sap-ui-xx-supportedLanguages="en,de"
 		></script>
+
+
+		<!-- Register service worker -->
+		<script>
+		  if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('/service-worker.js')
+			  .then(function(registration) {
+				console.log('Service Worker registrado com sucesso:', registration);
+			  })
+			  .catch(function(error) {
+				console.log('Erro ao registrar o Service Worker:', error);
+			  });
+		  }
+		</script>
 	</head>
 
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="br.com.switch.farmtenz"></div>
+		<div data-sap-ui-component data-sap-ui-async="true" data-name="br.com.switch.farmtenz"></div>
 	</body>
 </html>
