--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
 		<meta charset="utf-8" />
-		<title>Integration tests for the UI5 Application: br.com.switch.farmtenz</title>
+		<title>Integration tests for the UI5 Application: br.com.switch.salestem</title>
 		<script
 			id="sap-ui-bootstrap"
 			src="../../resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_horizon"
 			data-sap-ui-resourceroots='{
-				"br.com.switch.farmtenz": "../../",
+				"br.com.switch.salestem": "../../",
 				"integration": "."
 			}'
 			data-sap-ui-animation="false"
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" type="text/css" href="../../resources/sap/ui/thirdparty/qunit-2.css" />
 		<script src="../../resources/sap/ui/thirdparty/qunit-2.js"></script>
 		<script src="../../resources/sap/ui/qunit/qunit-junit.js"></script>
-		<script src="../../resources/sap/ui/qunit/qunit-coverage-istanbul.js" data-sap-ui-cover-only="br/com/switch/farmtenz/" data-sap-ui-cover-never="br/com/switch/farmtenz/test/"></script>
+		<script src="../../resources/sap/ui/qunit/qunit-coverage-istanbul.js" data-sap-ui-cover-only="br/com/switch/salestem/" data-sap-ui-cover-never="br/com/switch/salestem/test/"></script>
 	</head>
 	<body>
 		<div id="qunit"></div>
