--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
 		<meta charset="utf-8" />
-		<title>Unit tests for the UI5 Application: br.com.switch.farmtenz</title>
+		<title>Salestem</title>
 		<script
 			id="sap-ui-bootstrap"
 			src="../../resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
-				"br.com.switch.farmtenz": "../../",
+				"br.com.switch.salestem": "../../",
 				"unit": "."
 			}'
 			data-sap-ui-async="true"
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="../../resources/sap/ui/thirdparty/qunit-2.css" />
 		<script src="../../resources/sap/ui/thirdparty/qunit-2.js"></script>
 		<script src="../../resources/sap/ui/qunit/qunit-junit.js"></script>
-		<script src="../../resources/sap/ui/qunit/qunit-coverage-istanbul.js" data-sap-ui-cover-only="br/com/switch/farmtenz/" data-sap-ui-cover-never="br/com/switch/farmtenz/test/"></script>
+		<script src="../../resources/sap/ui/qunit/qunit-coverage-istanbul.js" data-sap-ui-cover-only="br/com/switch/salestem/" data-sap-ui-cover-never="br/com/switch/salestem/test/"></script>
 		<script src="../../resources/sap/ui/thirdparty/sinon.js"></script>
 		<script src="../../resources/sap/ui/thirdparty/sinon-qunit.js"></script>
 	</head>
