--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,13 +8,13 @@
 
 		<link rel="manifest" href="manifest.json">
 
-		<title>Salestem</title>
+		<title>Farmtenz</title>
 
 		<script
 			id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
-				"br.com.switch.salestem": "./"
+				"br.com.switch.farmtenz": "./"
 			}'
 			data-sap-ui-theme="sap_horizon, sap_horizon_dark"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
@@ -41,6 +41,6 @@
 	</head>
 
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-sap-ui-async="true" data-name="br.com.switch.salestem"></div>
+		<div data-sap-ui-component data-sap-ui-async="true" data-name="br.com.switch.farmtenz"></div>
 	</body>
 </html>
